--- a/src/components/List/ImageList.css
+++ b/src/components/List/ImageList.css
@@ -1,8 +1,19 @@
 .imageList_container{
+
+}
+
+.first_section_imageList{
     width: 100%;
-    background-color: yellow;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.second_section_imageList{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    justify-items: center;
+
 }
