--- a/src/components/List/ImageList.css
+++ b/src/components/List/ImageList.css
@@ -1,19 +1,17 @@
-.imageList_container{
-
+.imageList_container {
+  background-color: #916bbf;
 }
 
-.first_section_imageList{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.first_section_imageList {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-.second_section_imageList{
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    justify-items: center;
-
+.second_section_imageList {
+  width: 100%;
+  columns: 8 215px;
+  column-gap: 44px;
+  margin: 0 32px;
 }
