--- a/src/components/Banner/ImageBanner.css
+++ b/src/components/Banner/ImageBanner.css
@@ -25,3 +25,36 @@
     border-radius: 10px;
     cursor: pointer;
 }
+
+@media (
+    max-width: 420px
+){
+    .banner_container{
+        background-color: #916BBF;
+        width: 100%;
+        height: 150px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .banner_title{  
+        width: 100%;
+        background-color: #C996CC;
+        height: 100px;
+        color: #1C0C5B;
+        font-family: 'Prompt', sans-serif;    
+        font-weight: bolder;
+        font-size: 6vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        cursor: pointer;
+        margin: 5px;
+
+    }
+    
+}
