--- a/src/components/Button/ImageButton.css
+++ b/src/components/Button/ImageButton.css
@@ -1,16 +1,41 @@
-.button_container{
-    width: 15%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+
+@media (min-width:421px){
+    .button_container{
+        width: 15%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .button{
+        width: 100%;
+        height: 40px;
+        border-radius: 10px;
+        border: 2px solid #1C0C5B;
+        background-color: white;
+        cursor: pointer;
+        margin-left: 10px;
+    }
+    
 }
-.button{
-    width: 100%;
-    height: 40px;
-    border-radius: 10px;
-    border: 2px solid #1C0C5B;
-    background-color: white;
-    cursor: pointer;
-    margin-left: 10px;
+
+
+@media ( max-width: 420px){
+    .button_container{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .button{
+        width: 60%;
+        height: 50px;
+        border-radius: 10px;
+        background-color: #C996CC;
+        cursor: pointer;
+        border: none;
+        font-size: 4vh;
+    }
+    
 }
