--- a/src/components/Input/ImageInput.css
+++ b/src/components/Input/ImageInput.css
@@ -13,3 +13,24 @@
     border-radius: 10px;
     border: 2px solid #1C0C5B;
 }
+@media (
+    max-width:420px
+){
+    .input_container{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .input{
+        width: 100%;
+        height: 60px;
+        border-radius: 10px;
+        border: none;
+        margin: 5px;
+        font-size: 4.5vw;
+        }
+}
