--- a/src/components/List/ImageList.css
+++ b/src/components/List/ImageList.css
@@ -47,4 +47,12 @@ border-radius: 12px;
     color: white;
     font-size:3vw;
   }
+  .first_section_imageList {
+    width: 100%;
+    height: 170px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
