--- a/src/components/List/ImageList.css
+++ b/src/components/List/ImageList.css
@@ -33,7 +33,28 @@ border-radius: 12px;
   color: black;
 }
 
-@media (max-width: 450px) {
+.noResult_section_container{
+  width: 100%;
+  height: 800px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.noResult_text{
+  background-color: #C996CC;
+  width: 40%;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5vw;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+@media (max-width: 420px) {
   .text_image{
     color: white;
     position: relative;
@@ -54,5 +75,27 @@ border-radius: 12px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  .noResult_section_container{
+    width: 100%;
+    height:600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .noResult_text{
+    background-color: #C996CC;
+    width: 80%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 4vw;
+    color: black;
+    border-radius: 10px;
+    cursor: pointer;
   }
 }
