--- a/src/components/Banner/ImageBanner.css
+++ b/src/components/Banner/ImageBanner.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:ital@1&display=swap');
 
 .banner_container{
-    background-color: #916BBF;
+    background-color: #C996CC;
     width: 100%;
     height: 150px;
     display: flex;
