--- a/src/components/List/ImageList.css
+++ b/src/components/List/ImageList.css
@@ -6,7 +6,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 .second_section_imageList {
